2006-01-04  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>

	* bforce/daemon_call.c (daemon_call_branch): if phone ==
	00-00-000000, we call via ip

2005-10-24  Evgeniy Kozhuhovskiy  <ugenk@mgts.by>

	* bforce/sess_call.c (call_system): added possibility to run
	external script for each line in override

2005-09-03  Andrey Slusar  <anray@users.sourceforge.net>

	* bforce/prot_emsi_misc.c (emsi_parsedat): correct time_t arg
	size.

	* bforce/prot_zmrecv.c (zmodem_proc_ZFILE): correct time_t arg
	size.

2005-09-03  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>

	* bforce/prot_hydra.c: added patch to fix problems while sending
	files from ?lo on hydra, by anray

2005-06-23  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>

	* bforce/prot_emsi.c (sm_rx_waitseq): reviewed code for buggy-emsi option

	* configure.in: added --disable-buggy-emsi option for stupid mailers

2005-06-05  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>

	* configure.in: added logdir and spooldir to ./configure
	(thnx to max boyarov)

2005-06-03  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>
	
	* configure.in: fixed warnings under *bsd (removed sys/mount.h
	from the list of checking headers)
	* configure.in: syslog disabled by default

2005-05-08  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* bfutil/nlookup.c (print_nodeinfo): added "Type" entry to the
	nlookup output

2005-05-08  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* configure.in: Some changes
	* configure.in: Now default prefix is /usr/local/fido (as in fidogate)

2005-03-26  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* bforce/nodelist.c (nodelist_open): fixed compilation with gcc-2.95

2005-03-22  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>

	* INSTALL.ru: added some information

2005-02-21  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* bforce/sess_answ.c (answ_system): fixed deiniting of tcpip port
