@@ -93,7 +93,8 @@ static int daemon_call_branch(s_sysentry *syst, const char *lockdir, s_modemport
 	setproctitle("bforce calling %s, %s",
 		ftn_addrstr(abuf, state.node.addr), state.node.phone);
 	
-	if( ( syst->tcpip ) || (strcmp(state.node.phone,NO_PSTN_PHONE)) )
+/*	if( ( syst->tcpip ) || (strcmp(state.node.phone,NO_PSTN_PHONE)== 0) ) */
+	if( syst->tcpip )
 	{
 		rc = call_system_tcpip();
 	}
